[package]
name = "szafka"
version = "0.1.0"
authors = ["gbaranski <root@gbaranski.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
thiserror = "1.0.25"
tokio = { version = "1.7.1", features = ["io-util", "fs"] }

[dev-dependencies]
tokio = { version = "1.7.1", features = ["io-util", "fs", "macros", "rt-multi-thread"] }
