[package]
name = "szafka"
description = "Asynchronous persistent data store in Rust."
readme = "README.md"
version = "0.1.0"
authors = ["gbaranski <root@gbaranski.com>"]
license = "GPL-3.0-or-later"
keywords = ["asynchronous", "filesystem", "cache", "store", "persistent"]
categories = ["asynchronous", "filesystem"]
repository = "https://github.com/gbaranski/szafka/"
homepage = "https://github.com/gbaranski/szafka/"
edition = "2018"

[badges]
maintenance = { status = "as-is" }

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
thiserror = "1.0.25"
tokio = { version = "1.7.1", features = ["io-util", "fs"] }

[dev-dependencies]
tokio-test = "0.4.2"
tokio = { version = "1.7.1", features = ["io-util", "fs", "rt-multi-thread", "macros"] }
