[package]
name = "szafka"
description = "Persistent data store in Rust."
readme = "README.md"
version = "0.3.0"
authors = ["gbaranski <root@gbaranski.com>"]
license = "MIT"
keywords = ["filesystem", "cache", "store", "persistent"]
categories = ["asynchronous", "synchronous", "filesystem"]
repository = "https://github.com/gbaranski/szafka/"
homepage = "https://github.com/gbaranski/szafka/"
edition = "2018"

[badges]
maintenance = { status = "as-is" }

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
thiserror = "1.0.25"
tokio = { version = "1.7.1", features = ["io-util", "fs"], optional = true }

[dev-dependencies]
tokio-test = "0.4.2"
tokio = { version = "1.7.1", features = ["io-util", "fs", "rt-multi-thread", "macros"] }
criterion = { version = "0.3.4", features = [ "async_tokio" ] }
rand = "0.8.4"
hex = "0.4.3"

[[bench]]
name = "async"
harness = false
required-features = ["async"]

[[bench]]
name = "sync"
harness = false

[[example]]
name = "async"
required-features = ["async"]

[features]
default = ["sync"]

sync = []
async = ["tokio"]
